unpackaged/main/default/objects/Clip_Relation__c/Clip_Relation__c.object-meta.xml
<CustomObject>
    <label>Clip Relation</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Clip Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clip Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>