unpackaged/main/default/objects/Clip_Relation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clip Relations</relationshipLabel>
    <relationshipName>Clip_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>