unpackaged/main/default/objects/Clip_Relation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clip Relations</relationshipLabel>
    <relationshipName>Clip_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>