unpackaged/main/default/objects/Clip_Relation__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Clip Relations</relationshipLabel>
    <relationshipName>Clip_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>