unpackaged/main/default/objects/Clip_Relation__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Clip Relations</relationshipLabel>
    <relationshipName>Clip_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>