unpackaged/main/default/objects/Clip_Relation__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clip_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>